--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </head>
 <body bgcolor ="lightblue" >
    <h1 style="text-align : center;color:blue">
-            <b><u>MANIKANTH</u></b>
+            <b><u>BHARATH REDDY</u></b>
 </h1>
 <h2>
 NAME : Bharath reddy
