--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@ branch :cse
 Hello everyone we are present pursuing an computer science degree from gayatri vidya prishad college of engineering.we are going to explain about internet in this vidio.
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/LNnZol3ZRGc?si=rOrW3SIaLPqMPFaJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<img src="https://img.freepik.com/free-vector/internet-communication_24877-51945.jpg?size=626&ext=jpg&ga=GA1.1.1448711260.1707264000&semt=ais">
+
+
 </body>
 </html>
