--- a/bharath.html
+++ b/bharath.html
@@ -7,6 +7,5 @@
 <body>
     <img src = "https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_640.jpg">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/JzYC85T9JJw?si=pUrNd-J3USPkADXe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<a href="index.html">click here</a>
-</body>
+<a href="index.html">click here</a></body>
 </html>
