--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ branch :cse
 <p> 
 <FONT COLOR ="magenta">
 <i> 
-Hello everyone we are present pursuing an computer science degree from gayatri vidya prishad college of engineering.we are going to explain about internet in this vidio.
+Hello everyone I are from gayatri vidya prishad college of engineering.
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/LNnZol3ZRGc?si=rOrW3SIaLPqMPFaJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <a href="bharath.html">click here</a></body>
 </html>
