--- a/bharath.html
+++ b/bharath.html
@@ -5,5 +5,6 @@
         </title>
     </head>
 <body>
-<a href="tv9.com">click here</a></body>
+
+<a href="tv9telugu.com">click here</a></body>
 </html>
