--- a/bharath.html
+++ b/bharath.html
@@ -8,5 +8,5 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/nowsmUn1KmE?si=X1SmdwOQr2fEj5zy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3WCM7YXwt-s?si=yKefj_URv4a3nvs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/RWVri02mFCc?si=pCJO_f52BOvaDti5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <a href="tv9telugu.com">click here</a></body>
+    <a href="index.html">Home</a></body>
 </html>
